# FPGA

automatic_door/: automatic_door.vhd  run.bat  tb_automatic_door.vhd  timer_programavel.vhd
digital_alarm/: circuit.json  main.v
engines/Engines/Arquivos/: engines.lpf  top.sv
engines/Engines/Projeto/: Projeto.ldf  promote.xml  reportview.xml
engines/Engines/Projeto/Projeto_tcr.dir/: pn251011170636.tcr
engines/Engines/Projeto/impl1/: .build_status  Projeto_impl1.alt  Projeto_impl1.bgn  Projeto_impl1.bit  Projeto_impl1.edi  Projeto_impl1.fse  Projeto_impl1.mrp  Projeto_impl1.ncd  Projeto_impl1.ngd  Projeto_impl1.ngo  Projeto_impl1.par  Projeto_impl1.prf  Projeto_impl1.srd  Projeto_impl1.srm  (+20 more)
full_adder_and_subtractor/: design.sv  testbench.sv
health_monitoring_system/: CMakeLists.txt
health_monitoring_system/inc/: bmp280.h  tarefa_bmp280.h  tarefa_botao_a.h  tarefa_botao_b.h  tarefa_display_sensor.h  tarefa_display_word_9.h  tarefa_joystick_eventos.h  tarefa_word6.h  tarefa_word_9.h
health_monitoring_system/src/: CMakeLists.txt  bmp280.c  main.c  tarefa_bmp280.c  tarefa_display_sensor.c  tarefa_display_word6.c  tarefa_display_word_9.c  tarefa_joystick_eventos.c  tarefa_word6.c
light_food/: light_food.vcd  light_food.vhd  run.bat  tb_light_food.vhd  work-obj93.cf
parallel_register_8bits/: dff.vhd  parallel_register_8bits.vcd  parallel_register_8bits.vhd  run.bat  tb_parallel_register_8bits.vhd  work-obj93.cf
substrator_completo/: substratorcompleto.vvp  substratorcompleto_tb.vvp  subtratorcompleto.v  subtratorcompleto.vcd  subtratorcompleto_tb.v
(+51 files in other folders)
